# Financial-Tracker

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  conftest.py  docker-compose.yml  lefthook.yml  pipeline.py  pyproject.toml  railway.toml
.github/workflows/: backend.yml  frontend.yml
config/: .env.example  settings.py
docs/: INSIGHTS.md  PHASE2.md  moneymanager-feature-reference.md
docs/superpowers/plans/: 2026-06-07-revolut-ingestion-pipeline.md  2026-06-08-api-routes-frontend-wiring.md  2026-06-09-jwt-auth.md  2026-06-10-guidelines-review-skill.md  2026-07-02-sanitize-refactor.md  2026-07-07-sota-refactor.md  2026-07-12-categories-taxonomy.md  2026-07-12-privacy-home-pipeline.md  2026-07-13-balance-history.md  2026-07-14-category-drilldown.md  2026-07-14-stats-period-selector.md  2026-07-21-transactions-month-nav.md  2026-07-22-account-registry.md
docs/superpowers/specs/: 2026-06-07-revolut-ingestion-pipeline-design.md  2026-06-09-jwt-auth-design.md  2026-06-10-guidelines-review-design.md  2026-07-12-categories-taxonomy-design.md  2026-07-13-balance-history-design.md  2026-07-14-category-drilldown-design.md  2026-07-14-stats-period-selector-design.md  2026-07-21-transactions-month-nav-design.md  2026-07-22-account-registry-design.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
frontend/src/: App.module.css  App.tsx  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts  queries.ts  types.ts
frontend/src/components/: AnimatedNumber.tsx  BottomNav.module.css  BottomNav.tsx  ErrorBoundary.tsx  ProtectedRoute.tsx  Sidebar.module.css  Sidebar.tsx
frontend/src/lib/: period.ts
frontend/src/styles/: global.css
frontend/src/tests/: AccountModal.test.tsx  AccountsPage.test.tsx  AddTransactionModal.test.tsx  AnimatedNumber.test.tsx  CategoryDetailPage.test.tsx  ErrorBoundary.test.tsx  ProtectedRoute.test.tsx  StatsPage.test.tsx  TransactionsPage.test.tsx  period.test.ts
migrations/: env.py
migrations/versions/: 0001_baseline.py  0002_accounts.py  0003_account_registry.py
scripts/: calibrate_balances.py  codex_mcp.py  migrate_schema.py  migrate_taxonomy.py
src/auth/: enable_banking_auth.py
src/categorizer/: categorize.py
src/fintracker/: pipeline.py  settings.py  taxonomy.py
src/fintracker/auth/: enable_banking_auth.py
src/fintracker/categorizer/: categorize.py
src/fintracker/ingestion/: fetch_transactions.py  tasker_parser.py
src/fintracker/models/: reconciliation.py  transaction.py
src/fintracker/normalizer/: hash.py  normalize.py
src/fintracker/notifications/: telegram.py
src/fintracker/server/: app.py  deps.py
src/fintracker/storage/: db.py  db_insert.py  (+1 more)
src/ingestion/: fetch_transactions.py  tasker_parser.py
src/models/: notification.py  tasker.py  transaction.py
src/normalizer/: hash.py  normalize.py
src/notifications/: telegram.py
src/server/: app.py  scheduler.py
src/storage/: db_insert.py  reconcile.py
src/sync/: eb_sync.py
tests/: conftest.py  test_api_routes.py  test_auth.py  test_calibrate_balances.py  test_categorizer.py  test_deps.py  test_eb_sync.py  test_fetch_balances.py  test_hash.py  test_migrate_taxonomy.py  test_normalizer.py  test_reconcile.py  test_services.py  test_settings.py  test_sync_route.py  test_tasker_parser.py  test_taxonomy.py  test_telegram.py  test_webhook.py
tests/integration/: conftest.py  test_accounts_pg.py  test_reconcile_pg.py
(+28 files in other folders)
