[project]
name = "revolut-connector"
version = "0.1.0"
description = "Pipeline di finanza personale: Revolut → Postgres via Enable Banking API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.30.0",
    "httpx>=0.28.1",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.2.2",
    "pyjwt[cryptography]>=2.8.0",
    "cryptography>=48.0.0",
]

[project.scripts]
pipeline = "pipeline:main"
auth     = "src.auth.enable_banking_auth:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-httpx>=0.35.0",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
